--- a/Mode_train/model.ipynb
+++ b/Mode_train/model.ipynb
@@ -2188,6 +2188,24 @@
    "source": [
     "X_test\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The scikit-learn version is 1.0.2.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "print('The scikit-learn version is {}.'.format(sklearn.__version__))\n"
+   ]
   }
  ],
  "metadata": {
