modify some files

--- a/data_fetch/generate_csv.ipynb
+++ b/data_fetch/generate_csv.ipynb
@@ -288,7 +288,7 @@
     "    \n",
     "    # Filter out records with invalid number of teams.\n",
     "    if len(match['info']['teams']) != 2:\n",
-    "           continue\n",
+    "        continue\n",
     "\n",
     "    # Find the winner for current match\n",
     "    if match['info']['teams'][0]['win']:\n",
@@ -428,7 +428,7 @@
     "    \n",
     "    # Filter out records with invalid number of teams.\n",
     "    if len(match['info']['teams']) != 2:\n",
-    "           continue\n",
+    "        continue\n",
     "\n",
     "    # Find the winner for current match\n",
     "    if match['info']['teams'][0]['win']:\n",
@@ -1643,18 +1643,413 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
+   "id": "69f7abe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "63e97655",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('/Users/wen/Desktop/match_data.csv', index=False)"
+    "df = pd.read_csv('/Users/wen/Desktop/match_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "10cb8e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gameId</th>\n",
+       "      <th>creationTime</th>\n",
+       "      <th>gameDuration</th>\n",
+       "      <th>seasonId</th>\n",
+       "      <th>winner</th>\n",
+       "      <th>firstBlood</th>\n",
+       "      <th>firstTower</th>\n",
+       "      <th>firstInhibitor</th>\n",
+       "      <th>firstBaron</th>\n",
+       "      <th>firstDragon</th>\n",
+       "      <th>...</th>\n",
+       "      <th>t2_towerKills</th>\n",
+       "      <th>t2_inhibitorKills</th>\n",
+       "      <th>t2_baronKills</th>\n",
+       "      <th>t2_dragonKills</th>\n",
+       "      <th>t2_riftHeraldKills</th>\n",
+       "      <th>t2_ban1</th>\n",
+       "      <th>t2_ban2</th>\n",
+       "      <th>t2_ban3</th>\n",
+       "      <th>t2_ban4</th>\n",
+       "      <th>t2_ban5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4827269461</td>\n",
+       "      <td>1699731406894</td>\n",
+       "      <td>1509</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>238.0</td>\n",
+       "      <td>517.0</td>\n",
+       "      <td>233.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4831370335</td>\n",
+       "      <td>1700108360998</td>\n",
+       "      <td>2125</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>516.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4820743231</td>\n",
+       "      <td>1699143215353</td>\n",
+       "      <td>1880</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>897.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>203.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4826327830</td>\n",
+       "      <td>1699652621639</td>\n",
+       "      <td>2397</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>555.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4829806625</td>\n",
+       "      <td>1699943934236</td>\n",
+       "      <td>912</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>203.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112804</th>\n",
+       "      <td>4850585855</td>\n",
+       "      <td>1701814627793</td>\n",
+       "      <td>1670</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>122.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112805</th>\n",
+       "      <td>4846066499</td>\n",
+       "      <td>1701404149785</td>\n",
+       "      <td>1580</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>104.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112806</th>\n",
+       "      <td>4847997256</td>\n",
+       "      <td>1701578534172</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112807</th>\n",
+       "      <td>4849759189</td>\n",
+       "      <td>1701736236840</td>\n",
+       "      <td>2401</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>897.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>157.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112808</th>\n",
+       "      <td>4829298297</td>\n",
+       "      <td>1699912382485</td>\n",
+       "      <td>1865</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>897.0</td>\n",
+       "      <td>114.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>112809 rows × 61 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            gameId   creationTime  gameDuration  seasonId  winner  firstBlood  \\\n",
+       "0       4827269461  1699731406894          1509        13       2           2   \n",
+       "1       4831370335  1700108360998          2125        13       2           2   \n",
+       "2       4820743231  1699143215353          1880        13       2           1   \n",
+       "3       4826327830  1699652621639          2397        13       2           1   \n",
+       "4       4829806625  1699943934236           912        13       2           2   \n",
+       "...            ...            ...           ...       ...     ...         ...   \n",
+       "112804  4850585855  1701814627793          1670        13       1           1   \n",
+       "112805  4846066499  1701404149785          1580        13       2           1   \n",
+       "112806  4847997256  1701578534172          1800        13       2           1   \n",
+       "112807  4849759189  1701736236840          2401        13       2           1   \n",
+       "112808  4829298297  1699912382485          1865        13       2           1   \n",
+       "\n",
+       "        firstTower  firstInhibitor  firstBaron  firstDragon  ...  \\\n",
+       "0                0               0           1            2  ...   \n",
+       "1                0               2           2            1  ...   \n",
+       "2                2               2           1            2  ...   \n",
+       "3                1               1           1            2  ...   \n",
+       "4                0               0           0            2  ...   \n",
+       "...            ...             ...         ...          ...  ...   \n",
+       "112804           2               1           1            1  ...   \n",
+       "112805           0               2           2            1  ...   \n",
+       "112806           2               2           1            1  ...   \n",
+       "112807           0               2           1            1  ...   \n",
+       "112808           1               2           2            2  ...   \n",
+       "\n",
+       "        t2_towerKills  t2_inhibitorKills  t2_baronKills  t2_dragonKills  \\\n",
+       "0                   5                  0              0               3   \n",
+       "1                  11                  3              2               3   \n",
+       "2                   8                  1              0               4   \n",
+       "3                   7                  1              2               5   \n",
+       "4                   5                  0              0               2   \n",
+       "...               ...                ...            ...             ...   \n",
+       "112804              3                  0              0               0   \n",
+       "112805             11                  3              1               3   \n",
+       "112806             11                  2              0               2   \n",
+       "112807              9                  2              1               1   \n",
+       "112808              7                  1              1               3   \n",
+       "\n",
+       "        t2_riftHeraldKills  t2_ban1  t2_ban2  t2_ban3  t2_ban4  t2_ban5  \n",
+       "0                        1    200.0     24.0    238.0    517.0    233.0  \n",
+       "1                        2     -1.0     53.0    516.0     68.0     -1.0  \n",
+       "2                        1    157.0    897.0     90.0    164.0    203.0  \n",
+       "3                        1    555.0     43.0     11.0     90.0     39.0  \n",
+       "4                        1     53.0    122.0     12.0    141.0    203.0  \n",
+       "...                    ...      ...      ...      ...      ...      ...  \n",
+       "112804                   1     53.0     56.0     50.0    166.0    122.0  \n",
+       "112805                   2    164.0    350.0     -1.0     28.0    104.0  \n",
+       "112806                   2     35.0    164.0     25.0     63.0     53.0  \n",
+       "112807                   0    141.0      9.0    897.0     81.0    157.0  \n",
+       "112808                   0    134.0     28.0    235.0    897.0    114.0  \n",
+       "\n",
+       "[112809 rows x 61 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10cb8e5a",
+   "id": "45f6c9c7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1676,7 +2071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
